--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </style>
 </head>
 <body>
-<h1 style="text-align: center;">Cousin Sal Santorio's HTML Menu</h1>
+<h1 style="text-align: center;">Aunt Sally Santorio's HTML Menu</h1>
 <div class="container">
 <div class="left">
 <h1>Appetizers</h1>
